# ComfyUI-text-replace

./: .gitignore  __init__.py  coordinates.json  main.py  pyproject.toml  requirements.txt  test_api.py
api/: ocr_loc.py  text_erase.py
api/test/: test_loc_and_erase.py
node/: __init__.py  example_node.py
nodes/: chat_overlay_node.py  config.py  extract_json_node.py  image_erase_node.py  ocr_loc_node.py  util.py
nodes/api/: rectangle_merge.py  text_erase.py
nodes/api/test/: test_rect_merge.py
script/: test_api.py
